--- a/index.html
+++ b/index.html
@@ -21,3 +21,17 @@
     </main>
   </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JWT Demo</title>
+</head>
+<body>
+    <h1>JWT Demo</h1>
+    <button id="loginBtn">Log In</button>
+    <button id="protectedBtn">Access Protected Route</button>
+    <script src="script.js"></script>
+</body>
+</html>
